@@ -1,5 +1,5 @@
 /* makedoc.c -- make doc.c and funs.h from input files.
-   $Id: makedoc.c,v 1.8 2007-07-01 21:20:30 karl Exp $
+   $Id: makedoc.c,v 1.9 2007-12-09 23:30:40 karl Exp $
 
    Copyright (C) 1993, 1997, 1998, 1999, 2001, 2002, 2003, 2004, 2007
    Free Software Foundation, Inc.
@@ -144,9 +144,12 @@ main (int argc, char **argv)
       key_filename = NULL_DEVICE;
     }
 
+  /* The order of these calls depends exactly on the order in the
+     Makefile.{in,am}, or they might fail on filesystems with
+     high-precision times; see also the fclose calls below.  */
   funs_stream = must_fopen (funs_filename, "w");
-  doc_stream = must_fopen (doc_filename, "w");
   key_stream = must_fopen (key_filename, "w");
+  doc_stream = must_fopen (doc_filename, "w");
 
   fprintf (funs_stream,
       "/* %s -- Generated declarations for Info commands. */\n\n\
@@ -225,9 +228,11 @@ main (int argc, char **argv)
   fprintf (key_stream, "   { (char *)NULL, 0 }\n};\n");
   fprintf (funs_stream, "\n#define A_NCOMMANDS %u\n", next_func_key());
 
+  /* The order of these calls also depends exactly on the order in the
+   * Makefile.{in,am}; see the must_fopen calls above.  */
   fclose (funs_stream);
-  fclose (doc_stream);
   fclose (key_stream);
+  fclose (doc_stream);
 
   if (tags_only)
     maybe_dump_tags (stdout);
